--- a/MvcApplication12/Views/Shared/_Layout.cshtml
+++ b/MvcApplication12/Views/Shared/_Layout.cshtml
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
+    @RenderSection("css", false)
     <link href="/Content/Site.css" rel="stylesheet" />
 </head>
 <body>
