Added history to contributors

--- a/MvcApplication12/Views/Contributors/Index.cshtml
+++ b/MvcApplication12/Views/Contributors/Index.cshtml
@@ -49,7 +49,7 @@
                     }
                 </td>
                 <td>
-                    <a href="#" class="btn btn-primary">Show History</a>
+                    <a href="/contributors/history?contribid=@contributor.Id" class="btn btn-primary">Show History</a>
                     <a href="#" data-first-name="@contributor.FirstName" data-last-name="@contributor.LastName"
                        data-cell="@contributor.CellNumber" data-id="@contributor.Id" data-always-include="@contributor.AlwaysInclude" data-date="@contributor.Date" 
                        class="btn btn-danger edit-contrib">Edit</a>
